fix team member spacing

--- a/_sass/_headings.scss
+++ b/_sass/_headings.scss
@@ -4,7 +4,7 @@
       font-size: 28px;
       margin: 8px 0;
       color: #c23f36;
-      font-weight: 900;
+      font-weight: 800;
       line-height: 1;
       margin-bottom: 0;
     }
@@ -13,6 +13,7 @@
       font-size: 58px;
       text-transform: uppercase;
       line-height: 1;
+      font-weight: 800;
     }
     .learn-more  {
         margin-top: 45px;        
