--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -529,6 +529,7 @@ margin-right: -19%;
     }
     &-person {
       padding: 20px 40px;
+      width: 50%;
       h2,h3 {
         text-align: center;
         text-transform: uppercase;
